Bug 186723 external protocol handler NewURI doesn't check to see if SetSpec failed.. patch by andersma@luther.edu r=timeless sr=darin